; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_zyd.c_zyd_update_mcast.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_zyd.c_zyd_update_mcast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211com = type { %struct.zyd_softc* }
%struct.zyd_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211com*)* @zyd_update_mcast to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zyd_update_mcast(%struct.ieee80211com* %0) #0 {
  %2 = alloca %struct.ieee80211com*, align 8
  %3 = alloca %struct.zyd_softc*, align 8
  store %struct.ieee80211com* %0, %struct.ieee80211com** %2, align 8
  %4 = load %struct.ieee80211com*, %struct.ieee80211com** %2, align 8
  %5 = getelementptr inbounds %struct.ieee80211com, %struct.ieee80211com* %4, i32 0, i32 0
  %6 = load %struct.zyd_softc*, %struct.zyd_softc** %5, align 8
  store %struct.zyd_softc* %6, %struct.zyd_softc** %3, align 8
  %7 = load %struct.zyd_softc*, %struct.zyd_softc** %3, align 8
  %8 = call i32 @ZYD_LOCK(%struct.zyd_softc* %7)
  %9 = load %struct.zyd_softc*, %struct.zyd_softc** %3, align 8
  %10 = call i32 @zyd_set_multi(%struct.zyd_softc* %9)
  %11 = load %struct.zyd_softc*, %struct.zyd_softc** %3, align 8
  %12 = call i32 @ZYD_UNLOCK(%struct.zyd_softc* %11)
  ret void
}

declare dso_local i32 @ZYD_LOCK(%struct.zyd_softc*) #1

declare dso_local i32 @zyd_set_multi(%struct.zyd_softc*) #1

declare dso_local i32 @ZYD_UNLOCK(%struct.zyd_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
